--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,17 @@ android {
 }
 
 dependencies {
-
+    // Default
     implementation 'com.google.android.gms:play-services-wearable:18.0.0'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.wear:wear:1.2.0'
-
+    // CrossWalk
     implementation fileTree(dir: 'libs', include: ['*.aar'])
+    // BottomSheetDialog
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'com.google.android.material:material:1.8.0'
+    // FastJson
+    implementation 'com.alibaba.fastjson2:fastjson2:2.0.25'
 }
