--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,15 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
+        //ndk {
+        //    abiFilters  'armeabi', 'armeabi-v7a'
+        //}
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
