--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     // FastJson
     implementation 'com.alibaba.fastjson2:fastjson2:2.0.25'
+    // Ms AppCenter
+    def appCenterSdkVersion = '4.4.5'
+    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
 }
