--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.moling.micabrowser"
         minSdk 28
         targetSdk 33
-        versionCode 2
-        versionName "Rel-AL 0.2"
+        versionCode 3
+        versionName "Rel-AL 0.3"
         resConfigs 'en','cn'
     }
 
@@ -19,7 +19,7 @@ android {
         release {
             minifyEnabled false
             shrinkResources false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            //proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             ndk {
                 abiFilters  'armeabi-v7a'
             }
