--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,9 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            shrinkResources false
-            //proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             ndk {
                 abiFilters  'armeabi-v7a'
             }
@@ -49,7 +49,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     // FastJson
     implementation 'com.alibaba.fastjson2:fastjson2:2.0.25'
-    // Ms AppCenter
+    // Microsoft AppCenter
     def appCenterSdkVersion = '4.4.5'
     implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
     implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
