重写下载部分:分块下载(FEAT)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
         </activity>
         <activity android:name=".ui.MenuActivity" />
         <activity android:name=".ui.NoteActivity" />
+
+        <service android:name=".services.DownloadService" />
     </application>
 
 </manifest>
