--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault"
         android:hardwareAccelerated="true"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config">
         <uses-library
             android:name="com.google.android.wearable"
             android:required="true" />
