--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,12 @@ android {
 
     defaultConfig {
         applicationId "com.moling.micabrowser"
-        minSdk 27
+        minSdk 26
         targetSdk 33
         versionCode 5
         versionName "Rel-AL 0.5"
         resConfigs 'en','cn'
+
     }
 
     buildTypes {
@@ -42,20 +43,16 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.wear:wear:1.2.0'
-    // CrossWalk
-    implementation fileTree(dir: 'libs', include: ['*.aar'])
-    // BottomSheetDialog
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
-    implementation 'com.google.android.material:material:1.9.0'
-    // FastJson
-    implementation 'com.alibaba.fastjson2:fastjson2:2.0.25'
     // Microsoft AppCenter
     def appCenterSdkVersion = '4.4.5'
     implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
     implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
-    // OkHttp3
-    implementation "com.squareup.okhttp3:okhttp:4.9.1"
-    // Apache Commons
-    // https://mvnrepository.com/artifact/commons-io/commons-io
-    implementation 'commons-io:commons-io:2.12.0'
+    // CrossWalk
+    implementation fileTree(dir: 'libs', include: ['xwalk_core_library-23.53.589.4.aar'])
+    // Room
+    def room_version = "2.5.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    // FastJson
+    implementation 'com.alibaba.fastjson2:fastjson2:2.0.25'
 }
