--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -40,5 +40,5 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: upload-apk
+        name: MicaBrowser-apk
         path: ${{steps.sign_app.outputs.signedReleaseFile}}
